[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1" ,features = ["full"]}
hyper = {version = "0.14.24" ,features =["full"]}
hyper-rustls = "0.23.2"
anyhow = "1.0.69"
